[#2671] fix QR code appearance in dark mode
* white background was missing from the CSS
* drop support for Python < 3.8 and Django < 3.2

--- a/two_factor/static/two_factor/css/style.css
+++ b/two_factor/static/two_factor/css/style.css
@@ -9,6 +9,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    background-color: white;
 }
 .centered-text {
     text-align: center;
